@@ -31,24 +31,15 @@ import java.util.stream.Collectors;
  * @author huangyuhui
  */
 @Immutable
-public final class Arguments {
-
-    @SerializedName("game")
-    private final List<Argument> game;
-    @SerializedName("jvm")
-    private final List<Argument> jvm;
+public record Arguments(@SerializedName("game") @Nullable List<Argument> game, @SerializedName("jvm") @Nullable List<Argument> jvm) {
 
     public Arguments() {
         this(null, null);
     }
 
-    public Arguments(List<Argument> game, List<Argument> jvm) {
-        this.game = game;
-        this.jvm = jvm;
-    }
-
+    @Override
     @Nullable
-    public List<Argument> getGame() {
+    public List<Argument> game() {
         return game == null ? null : Collections.unmodifiableList(game);
     }
 
@@ -56,8 +47,9 @@ public final class Arguments {
         return new Arguments(game, jvm);
     }
 
+    @Override
     @Nullable
-    public List<Argument> getJvm() {
+    public List<Argument> jvm() {
         return jvm == null ? null : Collections.unmodifiableList(jvm);
     }
 
@@ -70,8 +62,8 @@ public final class Arguments {
     }
 
     public Arguments addGameArguments(List<String> gameArguments) {
-        List<Argument> list = gameArguments.stream().map(StringArgument::new).collect(Collectors.toList());
-        return new Arguments(Lang.merge(getGame(), list), getJvm());
+        List<StringArgument> list = gameArguments.stream().map(StringArgument::new).toList();
+        return new Arguments(Lang.merge(game(), list), jvm());
     }
 
     public Arguments addJVMArguments(String... jvmArguments) {
@@ -79,12 +71,12 @@ public final class Arguments {
     }
 
     public Arguments addJVMArguments(List<String> jvmArguments) {
-        return addJVMArgumentsDirect(jvmArguments.stream().map(StringArgument::new).collect(Collectors.toList()));
+        return addJVMArgumentsDirect(jvmArguments.stream().map(StringArgument::new).toList());
     }
 
     // TODO: How to distinguish addJVMArgumentsDirect from addJVMArguments? Naming is hard :)
-    public Arguments addJVMArgumentsDirect(List<Argument> jvmArguments) {
-        return new Arguments(getGame(), Lang.merge(getJvm(), jvmArguments));
+    public Arguments addJVMArgumentsDirect(List<? extends Argument> jvmArguments) {
+        return new Arguments(game(), Lang.merge(jvm(), jvmArguments));
     }
 
     public static Arguments merge(Arguments a, Arguments b) {
